# SqlDDL

./: Dockerfile  README.md  Taskfile.yaml  docker-compose.yaml  pyproject.toml
app/: main.py  pyvalid.py  sql_ddl_parser.py
