[tool.poetry]
name = "sql_dll_parser"
version = "0.1.0"
description = ""
authors = ["pilat.ip@pg.com"]

[tool.poetry.dependencies]
python = "^3.9"
simple-ddl-parser = "^0.26.5"
fastapi = "0.78.0"
uvicorn = "^0.19.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
